prometheus/Thanos/prometheus-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: kube-mon
  labels:
    app: prometheus
spec:
  clusterIP: None
  ports:
    - port: 9090
      name: http
      protocol: TCP
    - port: 10901
      name: grpc
      protocol: TCP
  selector:
    app: prometheus
    thanos-store-api: "true"
