prometheus/Thanos/thanos-store-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-store-gateway
  namespace: kube-mon
  labels:
    app: thanos-store-gateway
spec:
  type: ClusterIP
  ports:
    - name: http   # HTTP 端口：用于 Web UI 和健康检查
      port: 10902
      targetPort: http
      protocol: TCP
    - name: grpc   # gRPC 端口：用于被 Querier 调用（StoreAPI）
      port: 10901
      targetPort: grpc
      protocol: TCP
  selector:
    app: thanos-store-gateway  # 必须与 Pod 的标签匹配

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-store-gateway-ui
  namespace: kube-mon
spec:
  ingressClassName: nginx
  rules:
    - host: store.shixiaochuang.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-store-gateway
                port:
                  number: 10902  # 对应 Service 的 HTTP 端口（UI）
